<resources>
    <string name="app_name">EasyFindApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="employer">Employer</string>
    <string name="developer">Developer</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="try_again">Try Again</string>
    <string name="required_fields">Required Fields</string>
    <string name="fill_create_post_fields">Please fill title, description, choose experience level and select at least 1 skill!</string>
    <string name="fill_sign_in_required_fields">Please fill email address and password fields!</string>
    <string name="fill_sign_up_required_fields">Please fill email address,password and confirm password fields!</string>
    <string name="fill_complete_developers_profile_required_fields">Please choose profile photo, fill username,position,age,gender fields and select at least 1 skill!</string>
    <string name="fill_complete_employer_person_profile_required_fields">Please choose profile photo, fill username,email address,gender,gender fields!</string>
    <string name="fill_complete_employer_company_profile_required_fields">Please choose company logo, fill company name!</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="match_password">Please write same passwords!</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_role">Please select your Role</string>
    <string name="input_field_validation">Validation Error</string>
    <string name="fill_valid_email">Please fill valid email!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_age">Select Age</string>
    <string name="select_gender">Select Gender</string>
    <string name="username">Username</string>
    <string name="position">Position</string>
    <string name="skills">Skills</string>
    <string name="type_skill">Type Skill</string>
    <string name="role">Role</string>
    <string name="add_skill">Add Skill</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="close">Close</string>
    <string name="choose">Choose</string>
    <string name="person">Person</string>
    <string name="company">Company</string>
    <string name="company_name">Company name</string>
    <string name="age">Age</string>
    <string name="dashboard">DashBoard</string>
    <string name="messages">Messages</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter Description</string>
    <string name="experience_level">Experience level</string>
    <string name="entry_level">Entry level</string>
    <string name="save">save</string>
    <string name="intermediate">intermediate</string>
    <string name="create_post">Create Post</string>
    <string name="required_skills">Required Skills:</string>

</resources>