<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CompleteProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selectProfileImageDeveloper"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_blank_profile" />

        <TextView
            android:id="@+id/emailAddressDeveloperView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:hint="@string/email_address"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:theme="@style/InputFieldTextLabel">

            <EditText
                android:id="@+id/inputUserNameDeveloper"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:theme="@style/InputFieldTextLabel">

            <EditText
                android:id="@+id/inputPosition"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/position" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:theme="@style/InputFieldTextLabel">

            <EditText
                android:inputType="number"
                android:id="@+id/inputAgeDeveloper"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/age" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_gender"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/selectUserGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/male"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/female"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/userRoleTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:hint="@string/role"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:theme="@style/InputFieldTextLabel">

            <EditText
                android:id="@+id/inputAddSkillsField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/add_skill"
                android:theme="@style/InputFieldTextLabel" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="20dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="20dp"
            android:id="@+id/skillsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addSkillBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="36dp"
            android:background="@drawable/button_background"
            android:text="@string/add_skill"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/completeDeveloperProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/complete_profile"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>