<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CompleteProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectProfileImageEmployer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_blank_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="10dp" />


    <TextView
        android:id="@+id/emailAddressEmployerView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:hint="@string/email_address"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectProfileImageEmployer" />

    <Spinner
        android:id="@+id/selectEmployerTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddressEmployerView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/personGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="userNameEmployerTextInputLayout,selectAgeEmployerTextLayout, selectGenderTextView, selectPersonGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectEmployerTypeSpinner" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/companyNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:theme="@style/InputFieldTextLabel"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectEmployerTypeSpinner">

        <EditText
            android:id="@+id/inputCompanyName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/company_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameEmployerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:theme="@style/InputFieldTextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectEmployerTypeSpinner">

        <EditText
            android:id="@+id/inputUserNameEmployer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selectAgeEmployerTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:theme="@style/InputFieldTextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameEmployerTextInputLayout">

        <EditText
            android:inputType="number"
            android:id="@+id/inputAgeEmployer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/age" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/selectGenderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/select_gender"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectAgeEmployerTextLayout" />

    <RadioGroup
        android:id="@+id/selectPersonGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectGenderTextView">

        <RadioButton
            android:id="@+id/genderMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/male"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/genderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/female"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/completeEmployerProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/complete_profile"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>