<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.authentication.SignUpFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <LinearLayout
        app:layout_constraintVertical_bias="0.6"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/InputFieldTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp">

        <EditText
            android:id="@+id/inputEmailAddressSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/InputFieldTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp">

        <EditText
            android:id="@+id/inputPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/sign_up_button_background"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <TextView
        android:id="@+id/createNewAccountView"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>