<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="40dp"
    android:paddingStart="40dp"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.CreatePostEmployerActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo" />

    <com.google.android.material.textfield.TextInputLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/InputFieldTextLabel">
    <EditText
        android:id="@+id/titleTV"
        android:padding="15dp"
        android:hint="@string/enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/InputFieldTextLabel">
        <EditText
            android:id="@+id/description"
            android:padding="15dp"
            android:hint="@string/enter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/experiencelevel"
            android:padding="15dp"
            android:text="@string/experience_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:theme="@style/InputFieldTextLabel">

        <EditText
            android:id="@+id/inputAddSkillsField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/add_skill"
            android:theme="@style/InputFieldTextLabel" />
    </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/skillsRecyclerView"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp" />

    <Button
        android:layout_marginBottom="50dp"
        android:id="@+id/addSkillBtn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_background"
        android:text="@string/add_skill"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

        <Button
            android:id="@+id/createpostbtn"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:text="create post"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>

</ScrollView>