<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/error_dialog_layout_background"
    android:orientation="vertical">

     <LinearLayout
         android:id="@+id/entryid"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/entryclikedid"
             android:visibility="invisible"
             android:background="@mipmap/ic_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
             android:paddingStart="5dp"
             android:paddingTop="5dp"
             android:textColor="@android:color/black"
             android:text="@string/entry_level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

     </LinearLayout>

    <LinearLayout
        android:id="@+id/intermedieteid"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/interchoceid"
            android:visibility="invisible"
            android:background="@mipmap/ic_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/black"
            android:text="@string/intermediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expertid"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/expertchoseid"
            android:visibility="invisible"
            android:background="@mipmap/ic_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/black"
            android:text="Expert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveexperience"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>